# MathLab

./: CMakeLists.txt  README.md  gauss_solve_system.c  gauss_solve_system3.c  main.c  matrix.c  matrix.h  matrix_solve_system.c  matrix_solve_system3.c  parse_args.c  parse_args.h  root_finding.c
